deployment/k8s/yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kotlink
  labels:
    name: kotlink
